Normalised the transverse mode wavefunctions propagating in the positive and negative directions- still doesn't yield sensible results for the conductance values.

--- a/Josephson effect and Supercurrents/diagnostics.ipynb
+++ b/Josephson effect and Supercurrents/diagnostics.ipynb
@@ -67,23 +67,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7faa84c746d0>"
+       "<matplotlib.lines.Line2D at 0x7f83e6f5cb20>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae61e717f7f84f9d8117dd916ca0a245",
+       "model_id": "12b60cad043d4c58ba51635529f2e3c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -147,21 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.45403319721636165+0j)\n"
+      "(1+0j)\n"
      ]
     }
    ],
    "source": [
     "# Checking normalisation of modes:\n",
-    "U_neg = debug_dict['U_neg']\n",
-    "sample_propagating_mode = U_neg[: , 5]\n",
+    "U_pos = debug_dict['U_pos']\n",
+    "sample_propagating_mode = U_pos[: , 1]\n",
     "# Computing norm of vector:\n",
     "norm = sample_propagating_mode.conj() @ sample_propagating_mode\n",
     "print(norm)"
