Idle Notebook run

--- a/Josephson effect and Supercurrents/sanity_check.ipynb
+++ b/Josephson effect and Supercurrents/sanity_check.ipynb
@@ -88,23 +88,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7fde024981f0>"
+       "<matplotlib.colorbar.Colorbar at 0x7fb7501d7280>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c2066511b1e48efa15ef8e5dbfeeb67",
+       "model_id": "e3ea243f74024002bf5e22878d6c847a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q7/mt24cx7d41b3712vq5fcskd80000gn/T/ipykernel_31897/3250347524.py:38: MatplotlibDeprecationWarning: Starting from Matplotlib 3.6, colorbar() will steal space from the mappable's axes, rather than from the current axes, to place the colorbar.  To silence this warning, explicitly pass the 'ax' argument to colorbar().\n",
+      "/var/folders/q7/mt24cx7d41b3712vq5fcskd80000gn/T/ipykernel_1224/3250347524.py:38: MatplotlibDeprecationWarning: Starting from Matplotlib 3.6, colorbar() will steal space from the mappable's axes, rather than from the current axes, to place the colorbar.  To silence this warning, explicitly pass the 'ax' argument to colorbar().\n",
       "  plt.colorbar(mappable = im0)\n"
      ]
     },
@@ -162,14 +162,14 @@
        "Text(0.5, 1.0, 'Kwant')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46974641e403489097bc87d67afa7888",
+       "model_id": "157e3917acb246d6bf2c4fcd37d31817",
        "version_major": 2,
        "version_minor": 0
       },
@@ -239,23 +239,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fde02aa8430>]"
+       "[<matplotlib.lines.Line2D at 0x7fb7496aba90>]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0b12bf1f4364efb9684033dadc4a206",
+       "model_id": "fed1ddafe8924827af3f362c4cb16788",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,6 +294,13 @@
     "plt.figure()\n",
     "plt.plot(conductance_values)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
