Updates + Added supplemental code from https://journals.aps.org/prl/supplemental/10.1103/PhysRevLett.119.187704

--- a/Josephson effect and Supercurrents/sanity_check.ipynb
+++ b/Josephson effect and Supercurrents/sanity_check.ipynb
@@ -94,7 +94,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7fb7501d7280>"
+       "<matplotlib.colorbar.Colorbar at 0x7fb2520f6370>"
       ]
      },
      "execution_count": 3,
@@ -104,7 +104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3ea243f74024002bf5e22878d6c847a",
+       "model_id": "b48f562a17dc4b7cb9e5985f4476f949",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +152,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q7/mt24cx7d41b3712vq5fcskd80000gn/T/ipykernel_1224/3250347524.py:38: MatplotlibDeprecationWarning: Starting from Matplotlib 3.6, colorbar() will steal space from the mappable's axes, rather than from the current axes, to place the colorbar.  To silence this warning, explicitly pass the 'ax' argument to colorbar().\n",
+      "/var/folders/q7/mt24cx7d41b3712vq5fcskd80000gn/T/ipykernel_1323/3250347524.py:38: MatplotlibDeprecationWarning: Starting from Matplotlib 3.6, colorbar() will steal space from the mappable's axes, rather than from the current axes, to place the colorbar.  To silence this warning, explicitly pass the 'ax' argument to colorbar().\n",
       "  plt.colorbar(mappable = im0)\n"
      ]
     },
@@ -169,7 +169,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "157e3917acb246d6bf2c4fcd37d31817",
+       "model_id": "d6f7fa728cd5486c8fcca63e17b86515",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +245,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fb7496aba90>]"
+       "[<matplotlib.lines.Line2D at 0x7fb2525138e0>]"
       ]
      },
      "execution_count": 5,
@@ -255,7 +255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fed1ddafe8924827af3f362c4cb16788",
+       "model_id": "b6387962eefe4ac19c14967ee54de1ff",
        "version_major": 2,
        "version_minor": 0
       },
