Added a datalogging script which stores data in data.txt

--- a/Josephson effect and Supercurrents/Rashba2DEGJunction/RashbaJunction_band_structures.ipynb
+++ b/Josephson effect and Supercurrents/Rashba2DEGJunction/RashbaJunction_band_structures.ipynb
@@ -575,35 +575,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run this cell if you want to save the current notebook to the `savedsessions` folder"
+    "### Run this cell for:\n",
+    "- saving the current notebook to the `savedsessions` folder\n",
+    "- Adding a line to `data.txt` with simulation tag and the important parameters of the simulation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dill\n",
-    "# Dill save session string:\n",
-    "from datetime import datetime\n",
-    "when = datetime.today().strftime('%d-%m-%Y-%H-%M-%S')\n",
+    "# import dill\n",
+    "# # Dill save session string:\n",
+    "# from datetime import datetime\n",
+    "# when = datetime.today().strftime('%d-%m-%Y-%H-%M-%S')\n",
     "\n",
-    "import os\n",
+    "# import os\n",
     "\n",
-    "cwd = os.getcwd()\n",
-    "filepath = str(cwd) + '/savedsessions/'\n",
-    "savestring = filepath + 'BandStructsGap' + when + '.nb'\n",
-    "dill.dump_session(savestring)\n",
-    "\n"
+    "# cwd = os.getcwd()\n",
+    "# filepath = str(cwd) + '/savedsessions/'\n",
+    "# savestring = filepath + 'BandStructsGap' + when + '.nb'\n",
+    "# dill.dump_session(savestring)\n",
+    "\n",
+    "# # List of independent parameters as they are written in the dataclass:\n",
+    "# independent_parameters = ['E_z', 'phase']\n",
+    "\n",
+    "# # A dictionary of all the constant parameters:\n",
+    "\n",
+    "# control_dict = asdict(params)\n",
+    "# # Deleting independent parameters:\n",
+    "# for i in independent_parameters:\n",
+    "#     del control_dict[i]\n",
+    "\n",
+    "# print(control_dict)\n",
+    "\n",
+    "# import os\n",
+    "\n",
+    "# cwd = os.getcwd()\n",
+    "\n",
+    "# name = 'BandStructsGap' + when + '.nb'\n",
+    "# logstring = '___________________________'+ '\\n' + filepath + '\\n'  + name + ' \\n ' + str(control_dict)\n",
+    "\n",
+    "# hs = open('data.txt' , 'a')\n",
+    "# hs.write(logstring + '\\n')\n",
+    "# hs.close()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
